<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:id="@+id/editTextEmailLogin"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:hint="@string/password"
        android:id="@+id/editTextPasswordLogin"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center"
        android:id="@+id/login_btn"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/forgotpassword" />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/newuser"
        android:id="@+id/new_user_btn"
        android:onClick="create_new_user"/>

</LinearLayout>
